--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://img.icons8.com/doodle/256/binoculars--v1.png" />
+    <link
+      rel="icon"
+      href="https://img.icons8.com/doodle/256/binoculars--v1.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +13,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>ClassForma </title>
+    <title>ClassForma</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
